- fixed crappy project setup!